fix orange icon display on mobile

--- a/src/main/content/_assets/css/header.scss
+++ b/src/main/content/_assets/css/header.scss
@@ -317,6 +317,7 @@ a {
 }
 
 #slack-icon{
-    height:50px;
-    margin-right:12px;
+    height:35px;
+    position: relative;
+    bottom:5.5px;
 }
