--- a/src/main/content/_assets/css/home.scss
+++ b/src/main/content/_assets/css/home.scss
@@ -667,6 +667,7 @@ $color-kabanero:#C43804;
 
 #orange-slack-link{
     height:100%;
+    max-height:50px;
     position:relative;
     bottom:10px;
     right:10px;
